# Clinic-AI-Backend

./: .deployment  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  AZURE_AI_FOUNDRY_GUIDE.md  AZURE_AI_FOUNDRY_KQL_QUERIES.md  AZURE_FOUNDRY_AUDIT_REPORT.md  KQL_QUERIES.md  Makefile  README.md  deploy.sh  docker-compose.yml  env.example  gunicorn.conf.py  prompt_versioning_task.md  push-to-gcr.sh  pyproject.toml  render.yaml  requirements-azure.txt  requirements.txt  start_server.bat  startup-azure.py  startup-gunicorn.py  startup.py  swagger.yaml  sweeper_startup.py  test-app.py  test_intake_all_rounder.py  test_intake_fixes_comprehensive.py  test_question_generation_comprehensive.py  web.config  worker_startup.py
.github/actions/docker-build/: action.yml
.github/actions/health-check/: action.yml
.github/actions/lint-code/: action.yml
.github/actions/read-config/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/security-scan/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/validate-secrets/: action.yml
.github/workflows/: azure-deploy.yml  ci.yml  deploy-dev.yml  deploy-production.yml  deploy-sandbox.yml  main_clinic-ai-backend.yml
config/environments/: dev.yml  production.yml  sandbox.yml
deployments/: active
deployments/44c6a07c14bbe6de1143f5cbcda527c79a753e091767962392722/: status.xml
deployments/462e110495f36cdfee158f5dd41a68edd7656c0d1768194194225/: status.xml
deployments/496f758daa98fb15bce9bf960cce1a9ea258ad811767960400544/: status.xml
deployments/54979adf690322065d066b7a4b5d9c38fd6f011e1768192721211/: status.xml
deployments/68cbcf00bf8ada1976420443c2810c9772f07a551767962023261/: status.xml
deployments/9ddf72ad67ac4e616694051b67b27b1a3afff1a51768193917028/: status.xml
docker/: Dockerfile
docker/mongo-init/: init-db.js
docs/: himanshucodesetup.md  llm_interaction_logging.md
scripts/: bootstrap.sh  migrate_audio_to_db.py  migrate_to_multi_doctor.py  migrate_visits_to_separate_collection.py  migrate_workflow_types.py  optimize_patient_indexes.py  postbuild.sh  prebuild.sh  precommit.sh  queue_debug.py  queue_peek.py  queue_stats.py  setup_optimized_database.py  setup_storage.py  verify_foundry.py
src/clinicai/: __init__.py  app.py  bootstrap.py
src/clinicai/adapters/db/: __init__.py
src/clinicai/adapters/queue/: __init__.py  azure_queue_service.py
src/clinicai/adapters/services/: action_plan_service.py
src/clinicai/adapters/storage/: __init__.py  azure_blob_service.py
src/clinicai/api/: __init__.py  deps.py  errors.py
src/clinicai/api/routers/: __init__.py  audio.py  debug.py  doctor.py  health.py  intake.py  notes.py  patients.py  prescriptions.py  transcription.py  workflow.py
src/clinicai/api/schemas/: __init__.py  common.py  doctor_preferences.py  health.py  intake.py  medical.py  patient.py  patient_registration.py  prescription.py  summaries.py  visits.py
src/clinicai/api/utils/: responses.py
src/clinicai/application/: __init__.py  errors.py  uow.py
src/clinicai/application/dto/: __init__.py  patient_dto.py
src/clinicai/application/ports/: __init__.py
src/clinicai/application/use_cases/: __init__.py  answer_intake.py  create_walk_in_visit.py  generate_post_visit_summary.py  generate_pre_visit_summary.py  generate_soap_note.py  register_patient.py  transcribe_audio.py
src/clinicai/application/utils/: speaker_mapping.py  structure_dialogue.py
src/clinicai/core/: __init__.py  ai_client.py  ai_factory.py  audio_utils.py  auth.py  azure_openai_client.py  config.py  constants.py  container.py  exceptions.py  free_tier_config.py  helicone_client.py  hipaa_audit.py  key_vault.py  structured_logger.py
src/clinicai/core/utils/: __init__.py  crypto.py  crypto_utils.py  datetime_utils.py  file_utils.py  image_ocr.py  patient_id_resolver.py  patient_matching.py  string_utils.py  timing.py
src/clinicai/domain/: __init__.py  errors.py
src/clinicai/domain/entities/: __init__.py  doctor.py  patient.py  visit.py
src/clinicai/domain/enums/: workflow.py
src/clinicai/middleware/: auth_middleware.py  doctor_middleware.py  hipaa_middleware.py  performance_middleware.py  request_id_middleware.py
src/clinicai/observability/: __init__.py  audit.py  azure_monitor.py  logging_conf.py  metrics.py  tracing.py
src/clinicai/workers/: __init__.py  transcription_stuck_sweeper.py  transcription_worker.py
tests/: test_config_env_loading.py  test_health.py  test_intake_question_quality_scenarios.py
(+27 files in other folders)
